mine resets